# cardano-wallet-legacy

./: .gitignore  .hlint.yaml  .stack-to-nix.cache  .stylish-haskell.yaml  .template.md  .travis.yml  =2900000  ISSUE_TEMPLATE.md  Makefile  README.md  cardano-sl.yaml  cardano-wallet.cabal  default.nix  index.html  librocksdb.so.4.1  release.nix  stack-local.yaml  stack.yaml  swagger.json
.buildkite/: pipeline.yml
.github/: PULL_REQUEST_TEMPLATE.md  convert-references.sh
.github/ISSUE_TEMPLATE/: adr.md  bug_report.md
2018-11-22/: README.md
2018-11-29/: README.md
2018-12-06/: README.md
2018-12-13/: README.md
2018-12-20/: README.md
2018-12-27/: README.md
2019-01-03/: README.md
2019-01-10/: README.md
2019-01-17/: README.md
2019-01-24/: README.md
2019-01-31/: README.md
app/acceptance-tests/: acceptance-tests.hs  connect-script.hs
app/sync-plot/: Main.hs
app/wallet-client/: Main.hs  README.md
decoupled-wallet/: BListener.hs  ByronSpecifics.hs  README.md
integration/: HardwareWalletSpecs.hs
nix/: .stack-pkgs.nix  README.md  iohk-nix.json  pkgs.nix  stack-shell.nix
nix/.stack.nix/: acid-state-exts.nix  acid-state.nix  canonical-json.nix  cardano-crypto.nix  cardano-report-server.nix  cardano-sl-binary-test.nix  cardano-sl-binary.nix  cardano-sl-chain-test.nix  cardano-sl-chain.nix  cardano-sl-client.nix  cardano-sl-cluster.nix  cardano-sl-core-test.nix  cardano-sl-core.nix  cardano-sl-crypto-test.nix  cardano-sl-crypto.nix  cardano-sl-db.nix  cardano-sl-infra.nix  cardano-sl-mnemonic.nix  cardano-sl-networking.nix  cardano-sl-node-ipc.nix  cardano-sl-node.nix  cardano-sl-tools.nix  cardano-sl-util-test.nix  cardano-sl-util.nix  cardano-sl-utxo.nix  cardano-sl-x509.nix  cardano-sl.nix  cardano-wallet.nix  clock.nix  engine-io-wai.nix  engine-io.nix  ip.nix  kademlia.nix  log-warper.nix  network-transport-inmemory.nix  network-transport-tcp.nix  network-transport.nix  rocksdb-haskell-ng.nix  serokell-util.nix  socket-io.nix  (+3 more)
nix/acceptance-tests/: default.nix  windows.nix
server/: Main.hs
src/Cardano/Wallet/: Action.hs  Client.hs  Kernel.hs  NodeProxy.hs  Server.hs  Util.hs  WalletLayer.hs
src/Cardano/Wallet/API/: Indices.hs  Internal.hs  V1.hs  WIP.hs
src/Cardano/Wallet/API/Internal/: Handlers.hs
src/Cardano/Wallet/API/V1/: Accounts.hs  Addresses.hs  Handlers.hs  ReifyWalletError.hs  Swagger.hs  Transactions.hs  Types.hs  Wallets.hs
src/Cardano/Wallet/API/V1/Handlers/: Accounts.hs  Addresses.hs  Info.hs  Settings.hs  Transactions.hs  Wallets.hs
src/Cardano/Wallet/API/V1/Internal/: Update.hs
src/Cardano/Wallet/API/WIP/: Handlers.hs
src/Cardano/Wallet/Client/: Easy.hs  Http.hs  HttpsSettings.hs  Wait.hs
src/Cardano/Wallet/Client/CLI/: Options.hs  ProcessUtil.hs  Run.hs
src/Cardano/Wallet/Client/CLI/ProcessUtil/: POSIX.hs  Windows.hs
src/Cardano/Wallet/Kernel/: Accounts.hs  AddressPool.hs  AddressPoolGap.hs  Addresses.hs  BListener.hs  Decrypt.hs  Diffusion.hs  Ed25519Bip44.hs  EosWalletId.hs  HdSeq.hs  Internal.hs  Keystore.hs  Migration.hs  NodeStateAdaptor.hs  Pending.hs  PrefilterTx.hs  Prefiltering.hs  ProtocolParameters.hs  Read.hs  Restore.hs  Submission.hs  Transactions.hs  Types.hs  Wallets.hs
src/Cardano/Wallet/Kernel/DB/: AcidState.hs  BlockContext.hs  BlockMeta.hs  EosHdWallet.hs  HdRootId.hs  HdWallet.hs  Read.hs  Resolved.hs  Spec.hs  Sqlite.hs
src/Cardano/Wallet/Kernel/DB/EosHdWallet/: Create.hs  Read.hs
src/Cardano/Wallet/Kernel/DB/HdWallet/: Create.hs  Delete.hs  Derivation.hs  Read.hs  Update.hs
src/Cardano/Wallet/Kernel/DB/Spec/: Pending.hs  Read.hs  Update.hs
src/Cardano/Wallet/Kernel/DB/Sqlite/: Beam.hs  Persistent.hs
src/Cardano/Wallet/Kernel/DB/TxMeta/: Types.hs
src/Cardano/Wallet/Kernel/Submission/: Worker.hs
src/Cardano/Wallet/Kernel/Util/: Core.hs
src/Cardano/Wallet/Server/: CLI.hs  Plugins.hs
src/Cardano/Wallet/WalletLayer/: Kernel.hs
src/Cardano/Wallet/WalletLayer/Kernel/: Accounts.hs  Active.hs  Addresses.hs  Conv.hs  Internal.hs  Settings.hs  Transactions.hs  Wallets.hs
test/: Main.hs  Spec.hs
test/API/: MarshallingSpec.hs  SwaggerSpec.hs
test/Golden/: APILayout.hs  WalletError.hs
test/Test/Spec/: Accounts.hs  Addresses.hs  CoinSelection.hs  Fixture.hs  GetTransactions.hs  Wallets.hs
test/integration/: Main.hs  configuration.yaml
test/integration/Test/Integration/: APISanityChecks.hs  Documentation.hs
test/integration/Test/Integration/Framework/: Cluster.hs  DSL.hs  Request.hs  Scenario.hs
test/integration/Test/Integration/Scenario/: Accounts.hs  Addresses.hs  EosWallets.hs  Node.hs  Transactions.hs  Wallets.hs
test/manual/258/: create_addresses.sh  get_addresses.sh  scenarios.md
test/manual/scripts/: docopts.sh  example.sh  generate-addresses.sh  import-addresses.sh  wallet.sh
test/nightly/: TxMetaStorage.hs
test/unit/: Arbitrary.hs  DeltaCompressionSpecs.hs  Main.hs  TxMetaStorageSpecs.hs
test/unit/API/: MarshallingSpec.hs  RequestSpec.hs  SwaggerSpec.hs
test/unit/Golden/: APIV1Types.hs  Ed25519Addresses.hs  WalletError.hs
test/unit/Golden/golden/: api-layout.txt
test/unit/Golden/golden/apiV1Types/json/: Address1  (+10 more)
test/unit/Servant/: JsendCompliance.hs
test/unit/Test/Spec/: Accounts.hs  AddressPool.hs  Addresses.hs  BlockMetaScenarios.hs  CoinSelection.hs  DeltaCompression.hs  Ed25519Bip44.hs  Fixture.hs  GetTransactions.hs  HdSeq.hs  Kernel.hs  Keystore.hs  NewPayment.hs  Submission.hs  Translation.hs  TxMetaScenarios.hs  TxMetaStorage.hs  Wallets.hs
test/unit/Test/Spec/Client/: CLI.hs  Wait.hs
test/unit/UTxO/ToCardano/: Interpreter.hs
test/unit/Util/: Prefiltering.hs
test/unit/Wallet/Inductive/: Cardano.hs
wallet-tool/: README.md  cardano-wallet-client.cabal  cardano-wallet-tool.cabal
wallet-tool/exe/: Main.hs
wallet-tool/src/Cardano/Wallet/: ProcessUtil.hs
wallet-tool/src/Cardano/Wallet/Client/: CLI.hs  Easy.hs  Wait.hs
wallet-tool/test/: Spec.hs  WaitSpec.hs
(+1 files in other folders)
